[gd_scene load_steps=4 format=3 uid="uid://ki5cre8uywde"]

[ext_resource type="PackedScene" uid="uid://bquc2gj84xksv" path="res://Scenes/Player.tscn" id="1_2gg73"]
[ext_resource type="Script" path="res://Scenes/main.gd" id="1_w7dmm"]

[sub_resource type="Curve2D" id="Curve2D_ielps"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_w7dmm")

[node name="Player" parent="." instance=ExtResource("1_2gg73")]

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 480)

[node name="MobTimer" type="Timer" parent="."]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTime" type="Timer" parent="."]

[node name="MobPath" type="Path2D" parent="StartTime"]
curve = SubResource("Curve2D_ielps")

[node name="MobSpawnLocation" type="PathFollow2D" parent="StartTime/MobPath"]

[connection signal="hit" from="Player" to="." method="game_over"]
